--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasOfTopia - Your Gateway to Creative Tools</title>
     <meta name="description" content="The central hub for EasOfTopia's powerful visual editor and color palette utility, Paletteniffer.">
-    <meta name="keywords" content="EasOfTopia, Paletteniffer, visual editor, color palette, design tools">
+    <meta name="keywords" content="EasOfTopia, Paletteniffer, visual editor, color palette, design tools, TopiaStyler">
     <meta property="og:title" content="EasOfTopia - Creative Tools Hub">
     <meta property="og:description" content="Access the EasOfTopia Visual Editor and Paletteniffer from one central landing page.">
-    <meta property="og:image" content="https://easoftopia.com/assets/logo_landing.png">
-    <meta property="og:url" content="https://easoftopia.com">
+    <meta property="og:image" content="https://eas-of-topia.vercel.app/assets/logo_landing.png">
+    <meta property="og:url" content="https://eas-of-topia.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="EasOfTopia - Creative Tools Hub">
     <meta name="twitter:description" content="Access the EasOfTopia Visual Editor and Paletteniffer from one central landing page.">
-    <meta name="twitter:image" content="https://easoftopia.com/assets/logo_landing.png">
+    <meta name="twitter:image" content="https://eas-of-topia.vercel.app/assets/logo_landing.png">
     <meta name="twitter:site" content="@YourTwitterHandle">
 
     <link rel="stylesheet" href="style.css">
