--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
         </div>
     </footer>
 
-    <!-- Contact Modal (bottom right pop-up, no overlay) -->
-    <div id="contact-modal" class="fixed bottom-6 right-6 z-[100] max-w-lg w-full md:w-[420px] bg-white dark:bg-gray-900 rounded-2xl shadow-2xl p-6 md:p-8 opacity-0 pointer-events-none translate-y-8 transition-all duration-300">
-      <button id="contact-modal-close" class="absolute top-4 right-4 p-2 rounded-full bg-gray-100 dark:bg-gray-800 text-gray-500 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-violet-400" aria-label="Close contact form">
-        <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/></svg>
+    <!-- Enhanced Responsive Contact Modal (bottom right pop-up, no overlay) -->
+    <div id="contact-modal" class="opacity-0 pointer-events-none translate-y-8 transition-all duration-300">
+      <button id="contact-modal-close" aria-label="Close contact form">
+        <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/></svg>
       </button>
       <span class="section-subtitle">Get in Touch</span>
       <h2 class="section-title mb-2">Contact Us</h2>
